--- a/package.json
+++ b/package.json
@@ -73,11 +73,13 @@
     "webpack-dev-server": "^4.15.1"
   },
   "dependencies": {
+    "axios": "^1.4.0",
     "dotenv": "^16.3.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
     "serve": "^14.2.0",
+    "styled-components": "^6.0.1",
     "typescript": "^4.4.2",
     "web-vitals": "^2.1.0"
   }
